# PYTDL

./: .gitattributes  .gitignore  PYTDL-main.py  PYTDL_main.py  README.md  main.py  main.spec  pyproject.toml  requirements.txt
src/pytdl/: __init__.py  main.py
src/pytdl/assets/: __init__.py
